--- a/index.html
+++ b/index.html
@@ -58,11 +58,9 @@
       <section class="panel">
         <h2>Research Interests</h2>
         <ul class="list">
-          <li>Health disparities and social determinants of health</li>
-          <li>Social policy evaluation (e.g., conditional cash transfers)</li>
-          <li>Sleep health and cardiometabolic risk in Asian American populations</li>
-          <li>Acculturation and mental health</li>
-          <li>COVID-19 outcomes and population health</li>
+          <li>Social determinants of sleep health</li>
+          <li>Stressors and health disparities</li>
+          <li>Long COVID and population health</li>
         </ul>
       </section>
     </main>
